--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~54.0.29",
+    "expo-audio": "~1.1.1",
     "expo-constants": "~18.0.12",
+    "expo-file-system": "~19.0.21",
     "expo-linking": "~8.0.10",
+    "expo-media-library": "~18.2.1",
+    "expo-music-info": "^1.0.1",
+    "expo-music-info-2": "^2.0.0",
     "expo-router": "~6.0.19",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
